day2/dev-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dev-pod
  labels:
    app: nginx
spec:
  nodeSelector:
    env: dev
  containers:
  - name: nginx
    image: nginx
