day2/prod-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: clusterip-pod
  labels:
    app: nginx
spec:
  nodeName: worker02
  containers:
  - name: nginx
    image: nginx
