day2/cluster2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster2-svc
  namespace: app
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
