day2/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "cars.172.16.2.106.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web1-svc
            port:
              number: 80
  - host: "flowers.172.16.2.106.nip.io"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web2-svc
            port:
              number: 80
